@@ -9,6 +9,15 @@
 ## Diagrama de clases
 #### https://github.com/JuanSebastianMoralesVilla/BD-gestion-eficiente/blob/master/documents/Class%20Diagram%20Complete.png
 
+## INSTRUCCIONES DE USO
+### 1. Ejecute el programa en eclipse
+### 2. Vaya a la carpeta src
+### 3. Busque la carpeta ui-> main
+### 4. click derehco alli Run configurations
+### 5. Presione la pestaña Arguments y en VM arguments ponga lo siguiente --module-path "C:\Program Files\Java\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml
+### 6. En los parentesis ponga su ruta de la libreria del javaFX.
+### 7. Ejecute el programa
+
 # Integrantes
 ### Sebastian Morales
 ### Santiago Hurtado
